# ds4th_study

./: .gitignore  08_ipynb의_사본.ipynb  README.md  ch04_신경망_학습.ipynb  create_presentation.py  temp.md
.Trash-0/files/: text2sql_evaluation.jsonl  yi_ko_6b_eval.csv
.Trash-0/info/: text2sql_evaluation.jsonl.trashinfo  yi_ko_6b_eval.csv.trashinfo
230603_ADP_Notebook/: 1주_1강_확률분포.ipynb
archive/: 0_f53uQ4clZAE5DoAP.txt  구글드라이브_github연동_1.ipynb
archive/AI_Engineering/: Ch01_Introduction_to_Building_AI_Applications_park.pptx  Ch02_Understanding_Foundation_Models_jeong.pptx  Ch04_Evaluate_AI_Systems_ko.ipynb  Ch05_Prompt_Engineering_ko.ipynb  Ch07_Finetuning_ko.ipynb  Ch07_Finetuning_song.pptx  Ch08_ Dataset_Engineering_ko.ipynb  Ch09_Inference_Optimization_ko.ipynb  Language model review.pptx
archive/ChatGPT Prompt Engineering for Developers/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb  test.ipynb
archive/Functions, Tools and Agents with LangChain/: Functions, Tools and Agents with LangChain.ipynb  L1-openai_functions_student.ipynb  L2-lcel-student.ipynb  L3-function-calling-student.ipynb  L4-tagging-and-extraction-student.ipynb  L5-tools-routing-apis-student.ipynb  L6-functional_conversation-student.ipynb
archive/LLM을_활용한_실전_AI_애플리케이션_개발/: =0.7.0  CH03_트랜스포머_모델을_다루기위한_허깅페이스_트랜스포머_라이브러리_song.ipynb  CH05_GPU_효율적인_학습_song.ipynb  CH15_LLM_에이전트_song.ipynb  CH4_말잘듣는LLM_작성중.pptx  ch15_02_AutoGen_Agent.ipynb  chapter_9_나영재.ipynb
code_dongwoo/: .gitignore  ch06-bike-sharing-demand.ipynb  ch07-cat-in-the-dat.ipynb  ch08-porto-seguro-safe-driver-prediction.ipynb  environment.yml  gpt.ipynb
code_wooseok/: Chest_X_Ray_사진분류.ipynb  bike-sharing-demand.ipynb  cat-classification.ipynb  chapter6.ipynb  submission.csv  금융데이터수집하기_기본.ipynb
doc/: 02_분류_230317.pptx  안전운전자_예측_230325.pptx
source/: 2025_스터디_쉬는날.pptx  Untitled.ipynb  ch4-data-visualization-categorical.ipynb  ch4-data-visualization-distributions.ipynb  ch5-bayesian-optimization.ipynb  ch5-cross-validation.ipynb  ch6-modeling.ipynb  ch6-notebook.ipynb  ch7-eda.ipynb  ch7-modeling.ipynb  ch7-notebook.ipynb  cudf_test.ipynb  embedded_llm_development_roadmap_20250809004355.pptx  image_size_adjust_script.py  rag.py  tesarectOCRLLM.ipynb  번역용 프롬프트.md  스터디_운영_규칙_v01.pptx  주피터_삽입용_이미지_변환.ipynb  출판프로세스.pptx
source/langchain-docs/langchain/src/: .env.example  pyproject.toml  requirements.txt
source/langchain-docs/langchain/src/part01_introduction/: 01_hello_langchain.py  02_environment_check.py  README.md
source/langchain-docs/langchain/src/part01_introduction/solutions/: exercise_01.py  exercise_02.py
source/langchain-docs/langchain/src/part02_fundamentals/: 01_chat_models.py  02_messages.py  03_tools_basic.py  04_tools_advanced.py  05_tool_calling.py  README.md
source/langchain-docs/langchain/src/part02_fundamentals/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part03_first_agent/: 01_basic_agent.py  02_weather_agent.py  03_react_pattern.py  04_custom_prompt.py  05_streaming_agent.py  README.md
source/langchain-docs/langchain/src/part03_first_agent/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part04_memory/: 01_basic_memory.py  02_postgres_memory.py  03_message_trim.py  04_summarization.py  05_custom_state.py  06_long_term_store.py  README.md
source/langchain-docs/langchain/src/part04_memory/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part05_middleware/: 01_middleware_intro.py  02_before_after_model.py  03_wrap_model_call.py  04_wrap_tool_call.py  05_summarization_mw.py  06_tool_retry.py  07_guardrails.py  README.md
source/langchain-docs/langchain/src/part05_middleware/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part06_context/: 01_context_overview.py  02_dynamic_prompt.py  03_dynamic_tools.py  04_dynamic_model.py  05_tool_runtime.py  06_context_injection.py  README.md
source/langchain-docs/langchain/src/part06_context/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part07_multi_agent/: 01_why_multi_agent.py  02_subagents_basic.py  03_subagents_async.py  04_handoffs.py  05_skills_pattern.py  06_router_pattern.py  07_custom_workflow.py  README.md
source/langchain-docs/langchain/src/part07_multi_agent/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part08_rag_mcp/: 01_rag_basics.py  02_vector_store.py  03_agentic_rag.py  04_mcp_client.py  05_mcp_server.py  06_mcp_agent.py  README.md
source/langchain-docs/langchain/src/part08_rag_mcp/project/: README.md
source/langchain-docs/langchain/src/part08_rag_mcp/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part09_production/: 01_streaming_basics.py  02_stream_modes.py  03_custom_stream.py  04_hitl_basic.py  05_hitl_decisions.py  06_structured_output.py  README.md
source/langchain-docs/langchain/src/part09_production/frontend/: README.md  backend_server.py  react_stream.tsx
source/langchain-docs/langchain/src/part09_production/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langchain-docs/langchain/src/part10_deployment/: 01_langsmith_setup.py  02_tracing.py  03_testing.py  04_evaluation.py  05_deployment.py  06_observability.py  README.md
source/langchain-docs/langchain/src/part10_deployment/solutions/: exercise_01.py  exercise_02.py  exercise_03.py
source/langgraph/: README.md  env.txt  pyproject.toml  구현_공유_템플릿.md  이론_발표_템플릿.md
source/langgraph/code/: PRJ_01_LangChain_ToolCalling.ipynb  PRJ_02_LangGraph_StateGraph.ipynb
source/langgraph/data/: Apartment.txt  Commercial.txt
wooseok_code/: Chest_X_Ray_사진분류.ipynb
임시폴더/: 1주_1강_확률분포.ipynb
(+2031 files in other folders)
